# pilot-urjc

./: README.md  third_parties.repos
head_tracking/: CMakeLists.txt
head_tracking/head_tracking/: CMakeLists.txt  package.xml
head_tracking/head_tracking/include/head_tracking/: HeadController.hpp  PIDController.hpp
head_tracking/head_tracking/launch/: tracking.launch.py
head_tracking/head_tracking/src/head_tracking/: HeadController.cpp
head_tracking/head_tracking/tests/: pid_test.cpp
head_tracking/head_tracking_bt/: CMakeLists.txt  package.xml
head_tracking/head_tracking_bt/include/head_tracking_bt/: TrackObjects.hpp
head_tracking/head_tracking_bt/include/head_tracking_bt/ctrl_support/: BTLifecycleCtrlNode.hpp
head_tracking/head_tracking_bt/src/head_tracking_bt/: TrackObjects.cpp
head_tracking/head_tracking_bt/tests/: CMakeLists.txt  bt_head_tracking_test.cpp
head_tracking/head_tracking_msgs/: package.xml
head_tracking/launch/: tracking.launch.py
head_tracking/src/: head_tracker_main.cpp
head_tracking/src/head_tracking/: PIDController.cpp
head_tracking_msgs/: CMakeLists.txt
pilot_nav2_bt/: CMakeLists.txt  package.xml
pilot_nav2_bt/include/pilot_nav2_bt/: PathPointAt.hpp
pilot_nav2_bt/src/pilot_nav2_bt/: PathPointAt.cpp
pilot_nav2_bt/tests/: CMakeLists.txt  bt_nav2_test.cpp
tiago/tiago_navigation/: CMakeLists.txt  package.xml
tiago/tiago_navigation/config/: rviz_config.rviz
tiago/tiago_navigation/launch/: tiago_navigation.launch.py
tiago/tiago_sim/: CMakeLists.txt  Readme.md  package.xml
